--- a/camp1/WebContent/form.html
+++ b/camp1/WebContent/form.html
@@ -8,13 +8,13 @@
 	<h2>HTML Forms</h2>
 	
 	<form action="form_ok.jsp" method="post">
-	  <label for="fname">First name:</label><br>
-	  <input type="text" id="fname" name="fname" value="John"><br>
-	  <label for="lname">Last name:</label><br>
-	  <input type="text" id="lname" name="lname" value="Doe"><br><br>
+	  <label for="fname">ID:</label><br>
+	  <input type="text" id="fname" name="id" value="id"><br>
+	  <label for="lname">Student Number:</label><br>
+	  <input type="text" id="lname" name="stdid" value="22000000"><br><br>
 	  <input type="submit" value="Submit">
 	</form> 
 	
-	<p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
+	<p></p>
 </body>
 </html>
